  * docs/logcheck.sgml: clarify that "server" rules are
    included in "workstation" level
  * ignore.d.server/klogind: new
    - added rule for "connect from" message
  * ignore.d.server/login:
    - added rule for root logins on pseudo terminals
  * ignore.d.server/bind:
    - added rules for "received notify for zone" and
      "zone is up to date" message
  * Makefile: added an empty "all" make target,
    thanks to Paweł Hajdan, Jr. (closes: #567150)
  * ignore.d.server/ssh:
    - added rule for "disconnected by user" message (closes: #567317)
  * ignore.d.workstation/ifplugd:
    - added rule for "client: OK" message

  [ Hanspeter Kunz ]
  * ignore.d.server/dovecot:
    - added an optional prefix "dovecot: " to the deliver rule
    - added rule to ignore various sieve messages (stored mail, forwards,
      vacation replies and discards)

  [ Frédéric Brière ]
  * ignore.d.server/kernel:
    - added IPv6 support to "Treason uncloaked!" rule (closes: #546004)
    - added "Peer unexpectedly shrunk window" alternate rule

 -- Hannes von Haugwitz <hannes@vonhaugwitz.com>  Sun, 31 Jan 2010 20:13:27 +0100

logcheck (1.3.6) unstable; urgency=low

  [ Hannes von Haugwitz ]
  * ignore.d.paranoid/sysklogd:
    - more specific matching of upstream version and optional distribution
      revision, thanks to Caspar Clemens Mierau (closes: #566200)
  * ignore.d.paranoid/cron:
    - make /usr/sbin/ optional in pathnames of cron,
      thanks to Matthias Andree (closes: #566198)
  * ignore.d.server/dhclient:
    - adjusted rules to match optional ip address,
      thanks to David Pashley (closes: #552222)
  * debian/header.txt:
    - fixed incorrect spelling, thanks to Michael Lustfield (closes: #566197)
  * Use mime-construct to send mail (closes: #542781, #564693)
  * etc/logcheck.conf:
    - added hint for suggested package
  * Removed obsolete files in violations.ignore.d/ (closes: #566107)
  * ignore.d.workstation/wpasupplicant: