@@ -20,8 +20,10 @@ logcheck (1.3.7) UNRELEASED; urgency=low
   * ignore.d.server/bind:
     - added rules for "received notify for zone" and
       "zone is up to date" message
-  * Makefile: added an empty "all" make target,
-    thanks to Paweł Hajdan, Jr. (closes: #567150)
+  * Makefile:
+    - added an empty "all" make target, thanks to
+      Paweł Hajdan, Jr. (closes: #567150)
+    - renamed BINDIR to SBINDIR
   * ignore.d.server/ssh:
     - added rule for "disconnected by user" message (closes: #567317)
   * ignore.d.workstation/ifplugd:
